@@ -1,3 +1,8 @@
+2008-08-04  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: _OnNickChange(): Nick changes now use
+	  colored nicks.
+
 2008-07-31  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Fixed /help command to spit out the
